--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,24 @@
+<h1>Bem-vindo!</h1>
+<p>Novo Sistema de Apontamento de Horas</p>
 
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Apontar Horas</h5>
 
-<h1> hello world </h1>
+        <button type="button" class="btn btn-primary btn-lg">Apontar Horas</button>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Historico de Horas</h5>
+        <button type="button" class="btn btn-primary btn-lg">Visualizar</button>
+      </div>
+    </div>
+  </div>
+</div>
