--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+    <%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Montserrat:300,400,700' %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-<!--    < %= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>-->
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body class="bg-light">
@@ -30,7 +30,6 @@
   -->
 
   <%= render 'layouts/navbar' %>
-
 
   <main class="content">
     <div class="container mt-4">
