--- a/app/views/time_entries/new.html.erb
+++ b/app/views/time_entries/new.html.erb
@@ -1,14 +1,28 @@
-<h1>New Article</h1>
+<h1>Apontar Horas</h1>
 
-<%= form_with model: @time_entry do |form| %>
+<p><%= Date.today.strftime('%d/%m/%Y') %></p>
+<p>Hora: <%= Time.now.to_s(:time) %></p>
+
+<%= form_with model: @time_entry, url: user_time_entries_path do |form| %>
+  <%= form.hidden_field :date, value: Date.today %>
+
   <div>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
+    <%= form.label :chegada, for: :time %><br>
+    <%= form.text_field :first_period_in, type: 'time' %>
   </div>
 
   <div>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
+    <%= form.label 'Inicio' %><br>
+    <%= form.text_field :first_period_out, type: 'time' %>
+  </div>
+  <div>
+    <%= form.label 'Termino' %><br>
+    <%= form.text_field :second_period_in, type: 'time' %>
+  </div>
+
+  <div>
+    <%= form.label 'Saida' %><br>
+    <%= form.text_field :second_period_out, type: 'time' %>
   </div>
 
   <div>
