--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -17,8 +17,8 @@
           <%= f.label :email %><br />
           <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
         </div>
-        
-        <div class="actions">
+
+        <div class="actions mt-2">
           <%= f.submit "Send me reset password instructions", class: 'btn btn-sm btn-success'  %>
         </div>
       <% end %>
