--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,7 +31,7 @@
           <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
         </div>
         <div class="row">
-          <div class="col">
+          <div class="col mt-2">
             <%= f.submit "Sign up", class: 'btn btn-success' %>
           </div>
         </div>
